--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" href="./favicon/favicon.ico" sizes="any">
+    <link rel="icon" href="./favicon/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" href="./favicon/android-chrome-512x512.png" sizes="512x512">
+    <link rel="icon" href="./favicon/favicon-32x32.png" sizes="any">
+    <link rel="apple-touch-icon" href="./favicon/apple-touch-icon.png">
    <link rel="stylesheet" href="style.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
